--- a/themes/evolve/lessc/Drupal/Campaign.less
+++ b/themes/evolve/lessc/Drupal/Campaign.less
@@ -722,14 +722,14 @@
 /* CHOOSE PHYSIO SPECIFIC */
 .page-node-547{
 	#section-main-content{
-		padding: 100px 0;
+		padding: 50px 0;
 		@media @larger-tablet-width-down{
 			.MainContent{
 				width: 100%;
 			}
 		}
 		@media @larger-phone-width-down{
-			padding: 50px 0;
+			padding: 25px 0;
 		}
 	}
 	h1.SectionHeader{
