--- a/themes/evolve/lessc/Drupal/Media.less
+++ b/themes/evolve/lessc/Drupal/Media.less
@@ -398,7 +398,7 @@ body .block .media_filter, body .media_filter{
 		}
 	
 		#section-main-content{
-			margin: 40px 0 40px;
+			padding-top: 50px;
 			@media @larger-tablet-width-down{
 				margin: 20px 0 40px;
 			}
